--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
           <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="file/zahid_resume.pdf" target="_blank">My Resume</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
@@ -40,7 +41,7 @@
           <h3>Anybody who approaches a project with the intent <br>to understand what the user is
             going to do is DESIGNER</h3>
         </div>
-        
+
       </div>
     </div>
     <div id="me">
@@ -60,15 +61,11 @@
               </div>
 
             </div>
-            <p>My name is Muhammad Zahid . I am UI/UX designer based in Delaware. I am in the field of designing since
-              2000.
-              During this time I have worked in graphic designing, web designing, multimedia designing and now my new
-              love
-              is UI/UX designing. To update my UI/UX designing skills I joined Career Foundry’s UI/UX certified course
-              which
-              really helped me to learn new trends in the field. I got the awareness about new trends, new technologies
-              and
-              new tools in the professional market.
+            <p>My name is Muhammad Zahid. I am a user interaction and experience designer based in Delaware. I have been in the field of graphic, web, multimedia and print design for over a decade.
+
+              I have found a new passion for user experience, seek to really understand how impactful good UX is for a user, and the important role it plays across all industries.
+
+              In order to stay current with my design skills, I recently graduated Career Foundry’s UI/UX certified course which helped me stay up to date with the trends in the ever-evolving field. This aided my awareness regarding new trends, technologies, and tools in the professional market.
 
             </p>
             <p>My future plan is to become a UX designer at a tech company that creates the best solutions for end users
@@ -84,13 +81,12 @@
 
             <h3>Affirmaton</h3>
             <ul>
-              <li>I have ability to manage time wisely across projects and competing priorities</li>
-              <li>I have ability to work with clients to understand detailed requirements and design complete user
-                experiences that meet client needs
-                and vision.
+              <li>I have the ability to manage a project's timeline efficiently and sort priorities accurately.</li>
+              <li>I put myself in the shoes of clients, to best understand their vision and the requirements for their idea. I am competent in executing all the needs of the client and to meet their vision.
+
               </li>
-              <li>Sketch</li>
-              <li>I have ability to learn new technical platforms and use new tools.</li>
+              <li>I have the ability to rapidly learn new technological platforms and new tools required for the role.</li>
+              <li>Communication is very important to me, as well as feedback.</li>
 
             </ul>
           </div>
@@ -122,15 +118,15 @@
             <h3>Design Skills</h3>
             <ul>
               <li>User Interface Design</li>
-              <li>Graphic Designing</li>
-              <li>Web Designing</li>
-              <li>Miltimedia Desiging</li>
+              <li>Graphic Design</li>
+              <li>Web Design</li>
+              <li>Multimedia Design</li>
               <li>2D & 3D Animation</li>
             </ul>
           </div>
         </div>
       </div>
-      
+
     </div>
     <div class="button-wrapper">
       <a href="file/zahid_resume.pdf" download target="_blank" class="button">Download my Resume</a>
@@ -143,7 +139,7 @@
         Do you like my work and want to discuss opportunities? Please get in touch.
       </p>
       <p>
-        Call: <a href="tel:302 981 8041">302 981 8041</a> or Skype me at <a href="skype:itsleothelion">itsleothelion</a>.
+        Call: <a href="tel:3029818041">302 981 8041</a> or Skype me at <a href="skype:itsleothelion">itsleothelion</a>.
       </p>
       <p> You can also email me <br><a href="mailto:zeegraphy@gmail.com" class="button_contact">zeegraphy@gmail.com</a>
       </p>
@@ -166,7 +162,7 @@
         </a>
       </div>
       <p>
-        © Copyright 2019 <span> All rights reserved.</span>
+        ©2019 <span>All rights reserved</span>
       </p>
     </div>
   </footer>
