--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <ul>
             <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="file/zahid_resume.pdf" target="_blank">My Resume</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
@@ -40,11 +41,7 @@
         <h1>UI/UX Designer</h1>
         <h2>Innovative and Thought Provoking</h2>
       </div>
-      <div class="resume">
-        <a href="file/zahid_resume.pdf" class="button" download target="_blank">Download My Resume</a>
       </div>
-
-    </div>
     <div id="work">
       <div class="container">
         <h2>My Projects</h2>
@@ -91,7 +88,7 @@
         </div>
       </div>
     </div>
-    
+
   </main>
   <footer id="contact">
     <div class="container">
@@ -100,11 +97,11 @@
         Do you like my work and want to discuss opportunities? Please get in touch.
       </p>
       <p>
-        Call: <a href="tel:302 981 8041">302 981 8041</a> or Skype me at <a href="skype:itsleothelion"> itsleothelion</a>.
+        Call: <a href="tel:3029818041">302 981 8041</a> or Skype me at <a href="skype:itsleothelion"> itsleothelion</a>.
       </p>
       <p> You can also email me <br><a href="mailto:zeegraphy@gmail.com" class="button_contact">zeegraphy@gmail.com</a>
       </p>
-      
+
       <br>
       <div>
         <a href="http://www.linkedin.com/in/muhammad-zahid-34b82133" target="_blank"> <svg height="50px" version="1.1"
@@ -123,7 +120,7 @@
         </a>
       </div>
       <p>
-        © Copyright 2019 <span> All rights reserved.</span>
+        ©2019 <span>All rights reserved</span>
       </p>
     </div>
   </footer>
