--- a/language.html
+++ b/language.html
@@ -24,6 +24,7 @@
                     <ul>
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
+                        <li><a href="file/zahid_resume.pdf" target="_blank">My Resume</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i
                                     class="fas fa-bars"></i></a></li>
@@ -136,7 +137,7 @@
                 Do you like my work and want to discuss opportunities? Please get in touch.
             </p>
             <p>
-                Call: <a href="tel:302 981 8041">302-981-8041</a> or Skype me at <a href="skype:itsleothelion"> itsleothelion</a>.
+                Call: <a href="tel:3029818041">302 981 8041</a> or Skype me at <a href="skype:itsleothelion"> itsleothelion</a>.
             </p>
             <p> You can also email me <br><a href="mailto:zeegraphy@gmail.com" class="button_contact">zeegraphy@gmail.com</a>
             </p>
@@ -162,7 +163,7 @@
                 </a>
             </div>
             <p>
-                © Copyright 2019 <span> All rights reserved.</span>
+                ©2019 <span>All rights reserved</span>
             </p>
         </div>
     </footer>
